--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ax": "^0.2.2",
     "axios": "^0.20.0",
     "parcel-bundler": "^1.12.4",
+    "reac": "^0.0.0",
     "react": "^16.13.1",
+    "react-data-grid": "^7.0.0-canary.22",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "styled-components": "^5.1.1"
   }
 }
